--- a/userChrome.css
+++ b/userChrome.css
@@ -7,12 +7,11 @@
 /* No close button on tabs. */
 	.tab-close-button { display: none; }
 
-/* Darker colour for inactive tabs */
-	#navigator-toolbox { background-color: #d3d3d3 !important; }
-	/* NOTE: this doesn't work well for dark themes. I don't know how to select
-	   for this. Something that works well is e.g:
-	   #navigator-toolbox { background-color: #6c6c6c !important; }
-	*/
+/* Darker colour for inactive tabs for light themes only*/
+	@media (-moz-toolbar-prefers-color-scheme: light) {
+		#navigator-toolbox { background-color: #d3d3d3 !important; }
+	}
+	
 
 /* Match active tabs with toolbar colour */
 	#tabbrowser-tabs:not([movingtab]) >#tabbrowser-arrowscrollbox >.tabbrowser-tab >.tab-stack >.tab-background[multiselected="true"],
